김앵커 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ beautifulsoup4==4.6.0
 bleach==1.5.0
 bs4==0.0.1
 cachetools==2.0.1
-certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 cycler==0.10.0
@@ -45,7 +44,7 @@ google-api-core==1.1.2
 google-resumable-media==0.3.0
 googleapis-common-protos==1.5.3
 grpc-google-iam-v1==0.11.4
-grpcio==1.6.3
+grpcio==1.8.6
 html5lib==0.9999999
 httplib2==0.10.3
 idna==2.6
@@ -59,7 +58,7 @@ jedi==0.11.0
 Jinja2==2.9.6
 joblib==0.11
 librosa==0.5.1
-llvmlite==0.20.0
+#llvmlite==0.20.0
 m3u8==0.3.3
 Markdown==2.6.9
 MarkupSafe==1.0
@@ -81,7 +80,7 @@ proto-google-cloud-pubsub-v1==0.15.4
 proto-google-cloud-spanner-admin-database-v1==0.15.3
 proto-google-cloud-spanner-admin-instance-v1==0.15.3
 proto-google-cloud-spanner-v1==0.15.3
-protobuf==3.4.0
+protobuf==3.5.1
 ptyprocess==0.5.2
 pyasn1==0.3.7
 pyasn1-modules==0.1.5
