--- a/requirements.txt
+++ b/requirements.txt
@@ -62,11 +62,11 @@ librosa==0.5.1
 m3u8==0.3.3
 Markdown==2.6.9
 MarkupSafe==1.0
-matplotlib==2.1.0
+matplotlib
 monotonic==1.3
 nltk==3.2.5
-numba==0.35.0
-numpy==1.13.3
+numba
+numpy
 oauth2client==3.0.0
 parso==0.1.0
 pexpect==4.2.1
@@ -80,7 +80,7 @@ proto-google-cloud-pubsub-v1==0.15.4
 proto-google-cloud-spanner-admin-database-v1==0.15.3
 proto-google-cloud-spanner-admin-instance-v1==0.15.3
 proto-google-cloud-spanner-v1==0.15.3
-protobuf==3.5.1
+protobuf
 ptyprocess==0.5.2
 pyasn1==0.3.7
 pyasn1-modules==0.1.5
@@ -92,8 +92,8 @@ pytz==2017.2
 requests==2.18.4
 resampy==0.2.0
 rsa==3.4.2
-scikit-learn==0.19.0
-scipy==0.19.1
+scikit-learn
+scipy
 simplegeneric==0.8.1
 six==1.11.0
 tenacity==4.4.0
