--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,7 @@ scipy
 simplegeneric==0.8.1
 six==1.11.0
 tenacity==4.4.0
+#tensorflow==1.13.0rc1
 #tensorflow-gpu==1.3.0
 #tensorflow-tensorboard==0.1.8
 tinytag==0.18.0
